--- a/src/aura/helpfulLinks/helpfulLinks.css
+++ b/src/aura/helpfulLinks/helpfulLinks.css
@@ -1,3 +1,6 @@
 .THIS.pull-up-margin {
-    margin-top: -1rem;
+    margin-top: -2.9rem;
+    border-top-left-radius: 0rem;
+    border-top-right-radius: 0rem;
+    border-top-color: transparent;
 }
