--- a/helpful-links/main/default/aura/helpfulLinks/helpfulLinks.cmp
+++ b/helpful-links/main/default/aura/helpfulLinks/helpfulLinks.cmp
@@ -1,10 +1,10 @@
 <aura:component implements="flexipage:availableForAllPageTypes" access="global" >
     <!--Attributes-->
     <aura:attribute type="String" name="cmpTitle" access="global" default="Helpful Links" description="Used to define the title that will be displayed."/>
-    <aura:attribute type="String" name="linkIcons" access="global" default="doctype:pdf,doctype:flash" description="The Lightning Design System name of the icon. Names are written in the format '\utility:down\' where 'utility' is the category, and 'down' is the specific icon to be displayed. Icons can be found here - https://lightningdesignsystem.com/icons/"/>
-    <aura:attribute type="String" name="linkTitles" access="global" default="Sample Title,Sample Title" description="The title you want displayed. For multiple links separate the titles with a comma e.g. 'Title 1, Title 2'"/>
-    <aura:attribute type="String" name="linkUrls" access="global"  default="/,/" description="Used to hold either the URLs or Record IDs."/>
-    <aura:attribute type="String" name="linkDescription" access="global" default="Sample Description,Sample Description" description="The description you want displayed. For multiple links separate the descriptions with a comma e.g. 'Description 1, Description 2'"/>
+    <aura:attribute type="String" name="linkIcons" access="global" default="doctype:pdf;doctype:flash" description="The Lightning Design System name of the icon. Names are written in the format '\utility:down\' where 'utility' is the category, and 'down' is the specific icon to be displayed. Icons can be found here - https://lightningdesignsystem.com/icons/"/>
+    <aura:attribute type="String" name="linkTitles" access="global" default="Sample Title;Sample Title" description="The title you want displayed. For multiple links separate the titles with a semicolon e.g. 'Title 1;Title 2'"/>
+    <aura:attribute type="String" name="linkUrls" access="global"  default="/;/" description="Used to hold either the URLs or Record IDs."/>
+    <aura:attribute type="String" name="linkDescription" access="global" default="Sample Description;Sample Description" description="The description you want displayed. For multiple links separate the descriptions with a semicolon e.g. 'Description 1;Description 2'"/>
     <aura:attribute type="Boolean" name="showTitle" access="global" default="true" description="Title that is used on the heading of the component."/>
     <aura:attribute type="Boolean" name="chainLists" access="global" default="false" description="If you are looking to combine lists of URLs and Salesforce content, enable this to chain the list."/>
     <aura:attribute type="String" name="navigateOption" access="global" default="URL" description="Used to control whether your links are to hosted Salesforce Content, generic URLs or SObject records." />
@@ -19,11 +19,11 @@
             <aura:set attribute="else">
                 <aura:if isTrue="{!v.showTitle}">
                     <div class="slds-p-bottom_small slds-size_1-of-1">
-                        <h2 class="slds-text-heading--small">{!v.cmpTitle}</h2>
+                        <h2 class="slds-text-heading_small font-bold">{!v.cmpTitle}</h2>
                     </div>
                 </aura:if>
                 <div class="slds-size_1-of-1">
-                    <ul class="slds-has-dividers--bottom-space">
+                    <ul class="slds-has-dividers_bottom-space">
                         <aura:iteration items="{!v.helpfulLinks}" var="link" indexVar="linkCount">
                             <li class="slds-item">
                                 <div class="slds-tile slds-media">
@@ -34,8 +34,8 @@
                                         <h3 class="slds-truncate" title="{!link.title}">
                                             <a href="javascript:void(0);" data-recordcount="{!linkCount}" onclick="{!c.previewFile}">{!link.title}</a>
                                         </h3>
-                                        <div class="slds-tile__detail slds-text-body--small">
-                                            <ul class="slds-list--horizontal slds-has-dividers--right">
+                                        <div class="slds-tile__detail slds-text-body_small">
+                                            <ul class="slds-list_horizontal slds-has-dividers_right">
                                                 <li class="slds-item">{!link.description}</li>
                                             </ul>
                                         </div>
