Update of applying linting rules

--- a/helpful-links/main/default/lwc/helpfulLinks/helpfulLinks.css
+++ b/helpful-links/main/default/lwc/helpfulLinks/helpfulLinks.css
@@ -1,7 +1,7 @@
 .pull-up-margin {
     margin-top: -2.9rem;
-    border-top-left-radius: 0rem;
-    border-top-right-radius: 0rem;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
     border-top-color: transparent;
 }
 .font-bold {
